fixed player info icons spacing md

--- a/css/style.css
+++ b/css/style.css
@@ -549,6 +549,7 @@ footer > * {
     flex-basis: calc(100% / 3);
 }
 
+/* Player Info */
 .player-info {
     display: flex;
 }
@@ -570,6 +571,11 @@ footer > * {
     align-items: center;
 
     padding: 0 1.5rem;
+}
+
+/* Player Main */
+.player-main-top > * {
+    vertical-align: middle;
 }
 
 
@@ -670,6 +676,9 @@ footer > * {
      * *****************************************/
     .player-info-right {
         flex-direction: row;
+        gap: 0.5rem;
+
+        padding: 0 2rem;
     }
 
  }
